--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,14 +15,9 @@ workflows:
         VITE_SUPABASE_URL: ${SUPABASE_URL}
         VITE_SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
         PACKAGE_NAME: "com.mastergrowbot.app"
+      node: 20
+      java: 21
     scripts:
-      - name: Set up Java 21
-        script: |
-          # Force Java 21 for Bouncy Castle 1.79+ compatibility and build stability
-          jdk_path=$(/usr/libexec/java_home -v 21)
-          echo "export JAVA_HOME=$jdk_path" >> $CM_ENV
-          export JAVA_HOME=$jdk_path
-          java -version
       - name: Install Dependencies
         script: |
           npm cache clean --force
@@ -31,12 +26,37 @@ workflows:
       - name: Web Build
         script: |
           npm run build
-      - name: Capacitor Sync & Build Fixes
+      - name: Capacitor Add & Surgical Patching
         script: |
-          # 1. Add Android platform if folder is missing
+          # 1. Create Android project
           npx cap add android || true
           
-          # 2. Inject Validated google-services.json
+          # 2. Inject Namespace (The 'Sed' Fix)
+          # Note: macOS sed requires the empty string '' after -i
+          sed -i '' 's/android {/android {\n    namespace "com.mastergrowbot.app"/' android/app/build.gradle
+          
+          # 3. Force Bouncy Castle 1.77 Resolution Strategy
+          # We overwrite the root build.gradle to ensure the resolutionStrategy is correctly placed
+          cat <<EOF > android/build.gradle
+          buildscript {
+              repositories { google(); mavenCentral() }
+              dependencies {
+                  classpath 'com.android.tools.build:gradle:8.2.1'
+                  classpath 'com.google.gms:google-services:4.4.2'
+              }
+          }
+          allprojects {
+              repositories { google(); mavenCentral() }
+              configurations.all {
+                  resolutionStrategy {
+                      force 'org.bouncycastle:bcprov-jdk18on:1.77'
+                  }
+              }
+          }
+          task clean(type: Delete) { delete rootProject.buildDir }
+          EOF
+
+          # 4. Inject google-services.json (Required for build)
           mkdir -p android/app
           cat <<EOF > android/app/google-services.json
           {
@@ -49,97 +69,15 @@ workflows:
             "configuration_version": "1"
           }
           EOF
-          
-          # 3. Inject gradle.properties
-          cat <<EOF >> android/gradle.properties
-          SUPABASE_URL=$VITE_SUPABASE_URL
-          SUPABASE_KEY=$VITE_SUPABASE_ANON_KEY
-          GEMINI_API_KEY=$VITE_GEMINI_API_KEY
-          EOF
 
-          # 4. Generate ROOT build.gradle with FORCED Resolution Strategy
-          cat <<EOF > android/build.gradle
-          buildscript {
-              repositories {
-                  google()
-                  mavenCentral()
-              }
-              dependencies {
-                  classpath 'com.android.tools.build:gradle:8.2.1'
-                  classpath 'com.google.gms:google-services:4.4.2'
-              }
-          }
-
-          allprojects {
-              repositories {
-                  google()
-                  mavenCentral()
-              }
-              configurations.all {
-                  resolutionStrategy {
-                      // FORCE version 1.77 to resolve the 1.79 JAR conflict in plugins
-                      force 'org.bouncycastle:bcprov-jdk18on:1.77'
-                  }
-              }
-          }
-
-          task clean(type: Delete) {
-              delete rootProject.buildDir
-          }
-          EOF
-
-          # 5. Correct settings.gradle
-          cat <<EOF > android/settings.gradle
-          include ':app'
-          include ':capacitor-android'
-          project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
-          include ':capacitor-cordova-android-plugins'
-          project(':capacitor-cordova-android-plugins').projectDir = new File('capacitor-cordova-android-plugins')
-          apply from: 'capacitor.settings.gradle'
-          EOF
-
-          # 6. Inject App build.gradle with mandatory namespace
-          cat <<EOF > android/app/build.gradle
-          apply plugin: 'com.android.application'
-          apply plugin: 'com.google.gms.google-services'
-
-          android {
-              namespace "com.mastergrowbot.app"
-              compileSdk 34
-              defaultConfig {
-                  applicationId "com.mastergrowbot.app"
-                  minSdkVersion 22
-                  targetSdkVersion 34
-                  versionCode 1
-                  versionName "1.0"
-                  testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-              }
-              buildTypes {
-                  release {
-                      minifyEnabled false
-                      proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-                  }
-              }
-          }
-
-          dependencies {
-              implementation fileTree(dir: 'libs', include: ['*.jar'])
-              implementation 'androidx.appcompat:appcompat:1.6.1'
-              implementation project(':capacitor-android')
-              implementation project(':capacitor-cordova-android-plugins')
-              implementation platform('com.google.firebase:firebase-bom:34.7.0')
-              implementation 'com.google.firebase:firebase-analytics'
-          }
-
-          apply from: 'capacitor.build.gradle'
-          EOF
-          
+          # 5. Capacitor Sync
           npx cap sync android
 
       - name: Build Android App Bundle
         script: |
           cd android
           chmod +x gradlew
+          # Upgrade Wrapper to 8.5
           ./gradlew wrapper --gradle-version 8.5 --distribution-type all
           ./gradlew bundleRelease --no-daemon
     artifacts:
