--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -10,10 +10,11 @@ workflows:
       groups:
         - Production
       vars:
-        VITE_GEMINI_API_KEY: ${GEMINI_API_KEY}
-        VITE_REVENUECAT_API_KEY: ${REVENUECAT_API_KEY}
-        VITE_SUPABASE_URL: ${SUPABASE_URL}
-        VITE_SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY}
+        VITE_GEMINI_API_KEY: ${VITE_GEMINI_API_KEY}
+        VITE_REVENUECAT_API_KEY: ${VITE_REVENUECAT_API_KEY}
+        VITE_SUPABASE_URL: ${VITE_SUPABASE_URL}
+        VITE_SUPABASE_ANON_KEY: ${VITE_SUPABASE_ANON_KEY}
+        FIREBASE_API_KEY: ${FIREBASE_API_KEY}
         PACKAGE_NAME: "com.mastergrowbot.app"
       node: 20
       java: 17
@@ -32,7 +33,7 @@ workflows:
           # 1. Create Android platform
           npx cap add android || true
           
-          # 2. Create variables.gradle (Fixes 'compileSdkVersion not specified' error)
+          # 2. Create variables.gradle (Fixes 'compileSdkVersion not specified' and missing SplashScreen version)
           cat <<EOF > android/variables.gradle
           ext {
               minSdkVersion = 22
@@ -43,6 +44,7 @@ workflows:
               androidxCoordinatorLayoutVersion = '1.2.0'
               androidxCoreVersion = '1.12.0'
               androidxFragmentVersion = '1.6.2'
+              coreSplashScreenVersion = '1.0.1'
               junitVersion = '4.13.2'
               androidxJunitVersion = '1.1.5'
               androidxEspressoCoreVersion = '3.5.1'
@@ -82,14 +84,14 @@ workflows:
           }
           EOF
 
-          # 5. Inject Google Services
+          # 5. Inject Google Services using FIREBASE_API_KEY environment variable
           mkdir -p android/app
           cat <<EOF > android/app/google-services.json
           {
             "project_info": { "project_number": "360575943200", "project_id": "gen-lang-client-0483274603", "storage_bucket": "gen-lang-client-0483274603.firebasestorage.app" },
             "client": [ {
               "client_info": { "mobilesdk_app_id": "1:360575943200:android:9d2fad05b843bffa4d3245", "android_client_info": { "package_name": "com.mastergrowbot.app" } },
-              "api_key": [ { "current_key": "AIzaSyBRIK10W7TOBUqxe9YjEXlGVkk0V43Nt9o" } ],
+              "api_key": [ { "current_key": "${FIREBASE_API_KEY}" } ],
               "services": { "appinvite_service": { "other_platform_oauth_client": [ { "client_id": "360575943200-mq17ju3a221117rgu96v7as1b4o49rq8.apps.googleusercontent.com", "client_type": 3 } ] } }
             } ],
             "configuration_version": "1"
