--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -56,7 +56,7 @@ workflows:
           # Inject namespace for Capacitor 6 compatibility
           sed -i '' 's/android {/android {\n    namespace "com.mastergrowbot.app"/' android/app/build.gradle
           
-          # 4. Overwrite root build.gradle with linked variables and Bouncy Castle fix
+          # 4. Overwrite root build.gradle with linked variables and Bouncy Castle fix in BOTH blocks
           cat <<EOF > android/build.gradle
           // MasterGrowbot Root Build Configuration
           apply from: "variables.gradle"
@@ -67,13 +67,19 @@ workflows:
                   classpath 'com.android.tools.build:gradle:8.2.1'
                   classpath 'com.google.gms:google-services:4.4.2'
               }
+              configurations.all {
+                  resolutionStrategy {
+                      // Force 1.77 in buildscript to prevent JAR conflict during plugin resolution
+                      force 'org.bouncycastle:bcprov-jdk18on:1.77'
+                  }
+              }
           }
 
           allprojects {
               repositories { google(); mavenCentral() }
               configurations.all {
                   resolutionStrategy {
-                      // Force 1.77 to prevent the 1.79 JAR execution exception in plugins
+                      // Force 1.77 across all subprojects to prevent the 1.79 JAR execution exception
                       force 'org.bouncycastle:bcprov-jdk18on:1.77'
                   }
               }
