--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -40,7 +40,7 @@ workflows:
           mkdir -p android/app
           cp google-services.json android/app/google-services.json
 
-          # 3. Create gradle.properties (CRITICAL: Fixes JVM and AndroidX behavior)
+          # 3. Create gradle.properties
           cat <<EOF > android/gradle.properties
           org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
           android.useAndroidX=true
@@ -66,7 +66,8 @@ workflows:
           }
           EOF
 
-          # 5. Root build.gradle with strict dependency forcing for Bouncy Castle
+          # 5. Root build.gradle with Corrected Bouncy Castle mapping
+          # We force 1.70 for jdk15on and 1.78.1 for jdk18on to satisfy AGP while avoiding the 1.79 bug.
           cat <<EOF > android/build.gradle
           apply from: "variables.gradle"
           buildscript {
@@ -78,7 +79,11 @@ workflows:
               configurations.all {
                   resolutionStrategy.eachDependency { details ->
                       if (details.requested.group == 'org.bouncycastle') {
-                          details.useVersion '1.78.1'
+                          if (details.requested.name.contains('jdk15on')) {
+                              details.useVersion '1.70'
+                          } else if (details.requested.name.contains('jdk18on')) {
+                              details.useVersion '1.78.1'
+                          }
                       }
                   }
               }
@@ -88,7 +93,11 @@ workflows:
               configurations.all {
                   resolutionStrategy.eachDependency { details ->
                       if (details.requested.group == 'org.bouncycastle') {
-                          details.useVersion '1.78.1'
+                          if (details.requested.name.contains('jdk15on')) {
+                              details.useVersion '1.70'
+                          } else if (details.requested.name.contains('jdk18on')) {
+                              details.useVersion '1.78.1'
+                          }
                       }
                   }
               }
@@ -106,10 +115,13 @@ workflows:
           ' android/app/build.gradle
           echo "apply plugin: 'com.google.gms.google-services'" >> android/app/build.gradle
 
-          # 7. Sync and Upgrade Wrapper immediately
+          # 7. Update Wrapper to 8.10.2 FIRST
           cd android
+          chmod +x gradlew
           ./gradlew wrapper --gradle-version 8.10.2 --distribution-type all
           cd ..
+
+          # 8. Sync Capacitor
           npx cap sync android
 
       - name: Build Android App Bundle
