--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@supabase/supabase-js": "^2.39.0",
     "@capacitor/core": "^6.0.0",
     "@capacitor/android": "^6.0.0",
-    "@revenuecat/purchases-capacitor": "^8.0.0"
+    "@revenuecat/purchases-capacitor": "^8.0.0",
+    "@capacitor-community/in-app-review": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
