--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -18,6 +18,7 @@ workflows:
     scripts:
       - name: Install dependencies
         script: |
+          rm -f package-lock.json
           npm install
       - name: Build Web Assets
         script: |
