--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
 }
 
-apply from: 'variables.gradle'
+apply from: 'variables.gradle'  // FIXED: This line was missing
 
 allprojects {
     repositories {
